push latest file updates

--- a/files/data-viz.html
+++ b/files/data-viz.html
@@ -36,7 +36,7 @@
 <li><a href="seau.html">Junior Seau</a></li>
 </ul>
 
-<div class="resizeSpec"><p>Created using: D3.js, HTML and CSS</br></br>This graphic was paired with an article about the early release of non-violent drug-offenders from federal custody in October 2016. The article took a micro approach, telling the stories of select individuals. The graphic below's purpose was to put those individuals identities in context and answer the question: Who are the 13,000+ other prisoners who qualified for early release?</p></div>
+<div class="resizeSpec"><p>This graphic was paired with an article about the early release of non-violent drug-offenders from federal custody in October 2016. The article took a micro approach, telling the stories of select individuals. The graphic below's purpose was to put those individuals identities in context and answer the question: Who are the 13,000+ other prisoners who qualified for early release?</p></div>
 
 <div class="data-viz">
 	<div class="prisoners">
