--- a/files/fDay.html
+++ b/files/fDay.html
@@ -34,8 +34,7 @@
 <li><a href="superbowl.html">The Superbowl</a></li>
 </ul>
 
-<div class="resize"><p>Created using: rStudio, Adobe Illustrator and Photoshop
-</br></br>
+<div class="resize"><p>
 Featured in a story about the history of Father's Day, this graphic is a visual breakdown of statistics about dads in the United States. It was also translated into Spanish and used by Telemundo in stories about the holiday.
 
 </p></div>
