--- a/files/info-design.html
+++ b/files/info-design.html
@@ -34,8 +34,7 @@
 <li><a href="superbowl.html">The Superbowl</a></li>
 </ul>
 
-<div class="resize"><p>Created using: rStudio, Adobe Illustrator and Photoshop
-</br></br>
+<div class="resize"><p>
 When the U.S. Women's Soccer Team made history with its third World Cup win, they were honored with a ticker tape parade in New York. This timeline was featured in an article about it being the First in Decades to Honor Women.</p></div>
 
 <div class="data-viz">
