--- a/files/nuclear.html
+++ b/files/nuclear.html
@@ -36,8 +36,7 @@
 <li><a href="seau.html">Junior Seau</a></li>
 </ul>
 
-<div class="resizeNuc"><p>Created using: D3.js, HTML and CSS
-</br></br>
+<div class="resizeNuc"><p>
 These timelines were featured in an investigation done by the Los Angeles i-team about testing done by the U.S. government and private companies on the limits of nuclear power at Area IV of the Santa Susana Field Laboratory (SSFL).</p></div>
 
 <div class="title"><span style="color: black">History of Nuclear Accidents</span></div>
