--- a/files/san-mateo.html
+++ b/files/san-mateo.html
@@ -36,8 +36,7 @@
 <li><a href="seau.html">Junior Seau</a></li>
 </ul>
 
-<div><p>Created using: Created using: D3.js, jQuery, HTML and CSS
-</br></br>
+<div><p>
 This interactive was part of collaboration with the Bay area investigative team on a story about a San Francisco community-college chancellor who was using public money to purchase alcohol and dine at pricey restaurants. It functions as a tool, allowing readers to explore the data behind this claim and compare his spending to those in other school districts.
 </p></div>
 <div class="title"><span style="margin-left: -55px; color: black">District Spending</span></div>
