--- a/files/superbowl.html
+++ b/files/superbowl.html
@@ -34,8 +34,7 @@
 <li class="active"><a href="superbowl.html">The Superbowl</a></li>
 </ul>
 
-<div class="resize"><p>Created using: HTML, CSS
-<br/><br/>
+<div class="resize"><p>
 This was collaboration between a co-worker and myself; she collected the information and I designed the graphic. This "by the numbers" piece is a visual display of the information she found, which would have traditionally been outlined in a bulleted list.</p></div>
 
 <div class="data-viz">
