--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <div class="landing">
-<div class="name">Cynthia Andrews</div>
-<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="name">Cy Andrews</div>
+<div class="position">Data Visualization Engineer</br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
@@ -29,7 +29,7 @@
 </div>
 <hr style="margin-left: 55px;">
 <div class="landing-page">
-	<div class="image"><img src="files/about/me.jpg"></div>
+	<div class="image"><img src="files/about/thumb.gif"></div>
 	<div class="statement">
 <div><div class="p">Created using: HTML, CSS, jQuery and D3.js
 </br></br>
