update about me

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 <div class="landing-page">
 	<div class="image"><img src="files/about/thumb.gif"></div>
 	<div class="statement">
-<div><div class="p">Created using: HTML, CSS, jQuery and D3.js
-</br></br>
+<div><div class="p">
 This portfolio was created to showcase the work of Cynthia Andrews.  She built this portfolio from the ground up which allows it to function both as a display of her work and an example of it.</div>
 </div>
 </body>
