--- a/files/work/data-viz/boozy_chancellor/galatolo.html
+++ b/files/work/data-viz/boozy_chancellor/galatolo.html
@@ -3,10 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/d3.v5.min.js"></script>
   </head>
    <div class = "wrap">
   <div class= "main">      <div class="buttons">
