--- a/files/work/data-viz/boozy_chancellor/table .html
+++ b/files/work/data-viz/boozy_chancellor/table .html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="http://data.nbcstations.com/national/templates/css/generic-ots-table.css" rel="stylesheet" type="text/css">
+<link href="https://data.nbcstations.com/national/templates/css/generic-ots-table.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <div class="wrapm">
