--- a/files/work/data-viz/nuclear_spill/ssfl-cose.html
+++ b/files/work/data-viz/nuclear_spill/ssfl-cose.html
@@ -3,7 +3,7 @@
   &lt;head&gt;<br />
     &lt;link rel="stylesheet" type="text/css" href="style.css"&gt;<br />
     &lt;meta charset="utf-8"&gt;<br />
-    &lt;script src="http://d3js.org/d3.v3.min.js"&gt;&lt;/script&gt;<br />
+    &lt;script src="https://d3js.org/d3.v5.min.js"&gt;&lt;/script&gt;<br />
   &lt;/head&gt;<br />
   &lt;div class = wrap&gt;<br />
   &lt;div class=main&gt;&lt;/div&gt;<br />
