--- a/files/work/data-viz/prisoner-release/index_m.html
+++ b/files/work/data-viz/prisoner-release/index_m.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-<link href="http://data.nbcstations.com/national/templates/css/generic-ots-table.css" rel="stylesheet" type="text/css">
+<link href="https://data.nbcstations.com/national/templates/css/generic-ots-table.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
@@ -232,8 +232,8 @@
   <div class="credits">Sources: United States Sententencing Commission </br>Credit: Cynthia Andrews/NBC</div> 
 </div>
 </body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
 <script>
 	
