--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="files/style.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="http://d3js.org/d3.v5.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <div class="landing">
 <div class="name">Cy Andrews</div>
-<div class="position">Data Visualization Engineer</br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="position">Data Visualization Engineer</br>Twitter: <a href="https://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
