--- a/files/work/data-viz/seau-stats/index.html
+++ b/files/work/data-viz/seau-stats/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		 <link rel="stylesheet" href="style.css">
-		<script src="d3/d3.js"></script>
+		<script src="d3.js"></script>
 		<script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 	</head>
 	<body>
