--- a/files/work/data-viz/prisoner-release/index.html
+++ b/files/work/data-viz/prisoner-release/index.html
@@ -17,9 +17,9 @@
   <div class="credits">Sources: United States Sententencing Commission </br>Credit: Cynthia Andrews/NBC</div> 
 </div>
 </body>
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-<script src="http//d3js.org/topojson.v5.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <script>
