--- a/files/work/data-viz/seau-stats/index-code.html
+++ b/files/work/data-viz/seau-stats/index-code.html
@@ -3,8 +3,8 @@
 	&lt;head&gt;<br />
 		&lt;meta charset="utf-8"&gt;<br />
 		 &lt;link rel="stylesheet" href="style.css"&gt;<br />
-		&lt;script src="https://d3js.org/d3.v3.min.js"&gt;&lt;/script&gt;<br />
-		&lt;script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"&gt;&lt;/script&gt;<br />
+		&lt;script src="http://d3js.org/d3.v3.min.js"&gt;&lt;/script&gt;<br />
+		&lt;script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"&gt;&lt;/script&gt;<br />
 	&lt;/head&gt;<br />
 	&lt;body&gt;<br />
 		&lt;div id="wrap"&gt;<br />
@@ -14,7 +14,7 @@
           	&lt;div class="dvoa"&gt;&lt;/div&gt;<br />
             <br />
             <br />
-            &lt;p class="foot"&gt;* Developed by &lt;a href="https://www.footballoutsiders.com/"&gt;Football Outsiders&lt;/a&gt; the &lt;a href="https://www.footballoutsiders.com/info/methods#DVOA"&gt;Defense-adjusted Value Over Average&lt;/a&gt; or "DVOA" is a statistic that "measures a team's efficiency by comparing success on every single play to a league average based on situation and opponent" and effectively shows the strength of a given team's defense during a given season.&lt;/p&gt;<br />
+            &lt;p class="foot"&gt;* Developed by &lt;a href="http://www.footballoutsiders.com/"&gt;Football Outsiders&lt;/a&gt; the &lt;a href="http://www.footballoutsiders.com/info/methods#DVOA"&gt;Defense-adjusted Value Over Average&lt;/a&gt; or "DVOA" is a statistic that "measures a team's efficiency by comparing success on every single play to a league average based on situation and opponent" and effectively shows the strength of a given team's defense during a given season.&lt;/p&gt;<br />
           <br />
             <br />
             &lt;h1 class="spacer"&gt; How Seau Stacks Up Against Other Notable Linebackers&lt;/h1&gt;<br />
