--- a/files/nuclear.html
+++ b/files/nuclear.html
@@ -9,20 +9,20 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <div class="master">
 <div class="name">Cynthia Andrews</div>
-<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="https://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
 <ul class="crumbs">
-  <li class="selected"><a href="../index.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
+  <li class="selected"><a href="landing-page.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
   <li><a href="data-viz.html"><span style="color:red;">Data Vizualization</span></a></li>
   <li><a href="info-design.html"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
 </ul>
@@ -36,7 +36,8 @@
 <li><a href="seau.html">Junior Seau</a></li>
 </ul>
 
-<div class="resizeNuc"><p>
+<div class="resizeNuc"><p>Created using: D3.js, HTML and CSS
+</br></br>
 These timelines were featured in an investigation done by the Los Angeles i-team about testing done by the U.S. government and private companies on the limits of nuclear power at Area IV of the Santa Susana Field Laboratory (SSFL).</p></div>
 
 <div class="title"><span style="color: black">History of Nuclear Accidents</span></div>
@@ -45,6 +46,9 @@ These timelines were featured in an investigation done by the Los Angeles i-team
 	<div class="nuclear">
 		<div>
 		<iframe class="nuclearViz" src="work/data-viz/nuclear_spill/index.html"></iframe>
+		</div>
+		<div class="nuclearHolder">
+		<iframe class="nuclearCode" src="work/data-viz/nuclear_spill/nuclear-code.html"></iframe>
 		</div>
 <div class="title" style="margin-top: 50px;"><span style="margin-left: -45px; color: black">Timeline: SSFL and the Brandeis Bardin Institute</span></div>
 <div class="resizeNuc"><p>The Brandeis-Bardin Institute, a center for Jewish study, learning and culture and home to Camp Alonim, a sleep-away-camp for kids, came into existence at the same time as the Santa Susana Field Lab was being built. While the employees at the Field Lab performed nuclear research and rocket tests, resulting in radioactive elements seeping into the soil and groundwater, children and adults were participating in activities just a few miles downhill at Brandeis.</br></br></p></div>
