--- a/files/pope.html
+++ b/files/pope.html
@@ -9,20 +9,20 @@
 	<meta name="author" content="SitePoint">
 
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <div class="master">
 <div class="name">Cynthia Andrews</div>
-<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="https://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
 <ul class="crumbs">
-  <li class="selected"><a href="../index.html"><span style="padding: 7px 17px 11px;">About</a></li>
+  <li class="selected"><a href="landing-page.html"><span style="padding: 7px 17px 11px;">About</a></li>
   <li><a href="data-viz.html"><span style="color: red;">Data Vizualization</span></a></li>
   <li><a href="info-design.html"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
 </ul>
@@ -36,11 +36,14 @@
 <li><a href="seau.html">Junior Seau</a></li>
 </ul>
 
+<div style="margin-left: 55px;"><p>Created using: D3.js, HTML, CSS and Adobe Illustrator</br></br>This interactive feature was published leading up to the Pope's visit to Philadelphia in July, 2016.</p></div>
+
 <div class="data-viz">
 	<div class="pope">
 		<div><iframe class="popeViz" src="work/data-viz/the_pope/index.html" scrolling="no"></iframe></div>
 	</div>
 </div>
+<div class="space"></div>
 </div>
 </body>
 </html>
