--- a/files/san-mateo.html
+++ b/files/san-mateo.html
@@ -9,20 +9,20 @@
 	<meta name="author" content="SitePoint">
 
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <div class="master">
 <div class="name">Cynthia Andrews</div>
-<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="https://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
 <ul class="crumbs">
-  <li class="selected"><a href="../index.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
+  <li class="selected"><a href="landing-page.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
   <li><a href="data-viz.html"><span style="color: red">Data Vizualization</span></a></li>
   <li><a href="info-design.html"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
 </ul>
@@ -36,7 +36,8 @@
 <li><a href="seau.html">Junior Seau</a></li>
 </ul>
 
-<div><p>
+<div><p>Created using: Created using: D3.js, jQuery, HTML and CSS
+</br></br>
 This interactive was part of collaboration with the Bay area investigative team on a story about a San Francisco community-college chancellor who was using public money to purchase alcohol and dine at pricey restaurants. It functions as a tool, allowing readers to explore the data behind this claim and compare his spending to those in other school districts.
 </p></div>
 <div class="title"><span style="margin-left: -55px; color: black">District Spending</span></div>
@@ -45,6 +46,7 @@ This interactive was part of collaboration with the Bay area investigative team 
 		<div><iframe class="san-mateoViz" src="work/data-viz/boozy_chancellor/galatolo.html"></iframe></div>
 	</div>
 </div>
+<div class="space"></div>
 </div>
 </body>
 </html>
