--- a/files/seau.html
+++ b/files/seau.html
@@ -9,20 +9,20 @@
 	<meta name="author" content="SitePoint">
 
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script src="https://d3js.org/d3.v3.min.js"></script>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <div class="master">
 <div class="name">Cynthia Andrews</div>
-<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="https://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
 <ul class="crumbs">
-  <li class="selected"><a href="l../index-code.html"><span style="padding: 7px 17px 11px;">About</a></li>
+  <li class="selected"><a href="landing-page.html"><span style="padding: 7px 17px 11px;">About</a></li>
   <li><a href="data-viz.html"><span style="color: red;">Data Vizualization</span></a></li>
   <li><a href="info-design.html"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
 </ul>
@@ -43,6 +43,7 @@
 		<div><iframe class="seauViz" src="work/data-viz/seau-stats/index.html"></iframe></div>
 	</div>
 </div>
+<div class="space"></div>
 </div>
 </body>
 </html>
