--- a/files/superbowl.html
+++ b/files/superbowl.html
@@ -9,20 +9,20 @@
 	<meta name="author" content="SitePoint">
 
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <div class="master">
 <div class="name">Cynthia Andrews</div>
-<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="https://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
 <ul class="crumbs">
-  <li class="selected"><a href="../index.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
+  <li class="selected"><a href="landing-page.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
   <li><a href="data-viz.html">Data Vizualization</a></li>
   <li><a href="info-design.html" style="color: red"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
 </ul>
@@ -34,12 +34,14 @@
 <li class="active"><a href="superbowl.html">The Superbowl</a></li>
 </ul>
 
-<div class="resize"><p>
+<div class="resize"><p>Created using: HTML, CSS
+<br/><br/>
 This was collaboration between a co-worker and myself; she collected the information and I designed the graphic. This "by the numbers" piece is a visual display of the information she found, which would have traditionally been outlined in a bulleted list.</p></div>
 
 <div class="data-viz">
 	<div class="superbowl">
 		<div class="resize"><iframe class="superbowlViz" src="work/info-design/superbowl/index.html"></iframe></div>
+		<div class="space"></div>
 	</div>
 </div>
 <div class="space"></div>
