--- a/files/work/data-viz/boozy_chancellor/san-mateo-code.html
+++ b/files/work/data-viz/boozy_chancellor/san-mateo-code.html
@@ -2,11 +2,11 @@
 &lt;html&gt;<br />
   &lt;head&gt;<br />
     &lt;link rel="stylesheet" type="text/css" href="style.css"&gt;<br />
-    &lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"&gt;<br />
+    &lt;link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"&gt;<br />
     &lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"&gt;&lt;/script&gt;<br />
-    &lt;script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"&gt;&lt;/script&gt;<br />
+    &lt;script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"&gt;&lt;/script&gt;<br />
   &lt;/head&gt;<br />
-    &lt;script src="https://d3js.org/d3.v5.min.js"&gt;&lt;/script&gt;<br />
+    &lt;script src="http://d3js.org/d3.v3.min.js"&gt;&lt;/script&gt;<br />
   &lt;/head&gt;<br />
    &lt;div class = "wrap"&gt;<br />
   &lt;div class= "main"&gt;      &lt;div class="buttons"&gt;<br />
