--- a/files/work/data-viz/prisoner-release/index-code.html
+++ b/files/work/data-viz/prisoner-release/index-code.html
@@ -17,9 +17,9 @@
   &lt;div class="credits"&gt;Sources: United States Sententencing Commission &lt;/br&gt;Credit: Cynthia Andrews/NBC&lt;/div&gt; <br />
 &lt;/div&gt;<br />
 &lt;/body&gt;<br />
-&lt;script src="https://d3js.org/d3.v3.min.js"&gt;&lt;/script&gt;<br />
-&lt;script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"&gt;&lt;/script&gt;<br />
-&lt;script src="https://d3js.org/topojson.v1.min.js"&gt;&lt;/script&gt;<br />
+&lt;script src="http://d3js.org/d3.v3.min.js"&gt;&lt;/script&gt;<br />
+&lt;script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"&gt;&lt;/script&gt;<br />
+&lt;script src="http://d3js.org/topojson.v1.min.js"&gt;&lt;/script&gt;<br />
 &lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"&gt;&lt;/script&gt;<br />
 <br />
 &lt;script&gt;<br />
