update for pages

--- a/files/nuclear.html
+++ b/files/nuclear.html
@@ -16,13 +16,13 @@
 </head>
 
 <div class="master">
-<div class="name">Cynthia Andrews</div>
-<div class="position">Web Producer, NBC Universal </br>Twitter: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="name">Cy Andrews</div>
+<div class="position">Data Visualization Engineer </br>Twitter <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
 <ul class="crumbs">
-  <li class="selected"><a href="landing-page.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
+  <li class="selected"><a href="../index.html"><span style="padding: 7px 17px 11px;">About</span></a></li>
   <li><a href="data-viz.html"><span style="color:red;">Data Vizualization</span></a></li>
   <li><a href="info-design.html"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
 </ul>
