--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Cynthia Andrews">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="files/style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -16,20 +16,20 @@
 </head>
 
 <div class="landing">
-<div class="name">Cynthia Andrews</div>
-<div class="position">Data Visualization Engineer </br>Twitter / Instagram: <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
+<div class="name">Cy Andrews</div>
+<div class="position">Data Visualization Engineer </br>Twitter <a href="http://twitter.com/datarulesme">@datarulesme</a></div>
 
 
 <div class="nav">
 <ul class="crumbs">
-  <li class="selected"><a href="landing-page.html"><span style="padding: 7px 17px 11px; color: red;">About</span></a></li>
-  <li><a href="data-viz.html">Data Vizualization</a></li>
-  <li><a href="info-design.html"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
+  <li class="selected"><a href="index..html"><span style="padding: 7px 17px 11px; color: red;">About</span></a></li>
+  <li><a href="files/data-viz.html">Data Vizualization</a></li>
+  <li><a href="files/info-design.html"><span style="padding: 7px 17px 11px;">Information Design</span></a></li>
 </ul>
 </div>
 <hr style="margin-left: 55px;">
 <div class="landing-page">
-	<div class="image"><img src="about/thumb.gif"></div>
+	<div class="image"><img src="files/about/thumb.gif"></div>
 	<div class="statement">
 <div><div class="p">
 </br></br>
